--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     text-decoration: none;
 }
 
+
 html{
     scroll-behavior: smooth;
 }
@@ -213,6 +214,54 @@ body::-webkit-scrollbar-thumb {
 }
 
 /* about section end */
+/* services section */
+
+.service {
+    display: flex;
+    flex-direction: column;
+    margin-top: 4rem;
+    padding: 1.4rem 7%;
+    justify-content: center;
+    align-items: center;
+}
+
+.service h2 {
+    font-size: 2.5rem;
+    margin-bottom: 3rem;
+    text-align: center;
+}
+
+.service img {
+    width: 25rem;
+    height: auto;
+    object-fit: cover;
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 2rem;
+}
+.service .row {
+    display: flex;
+    justify-content: space-between;
+    gap: 4rem;
+}
+
+.service .row div{
+    flex: 1 1 30rem;
+    padding: 1.4rem;
+    background-color: var(--bg);
+    box-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
+    border-radius: 0.5rem;
+    text-align: center;
+}
+
+.service .row div p {
+    margin-top: 1rem;
+    font-size: 1rem;
+    margin-bottom: 1.4rem;
+    text-align: justify;
+}
+
+/* services section end */
 
 /* media querries */
 
@@ -281,6 +330,10 @@ body::-webkit-scrollbar-thumb {
     .about .row .about-img img{
         height: 20rem;
         object-fit: cover;
+    }
+
+    .service .row {
+        flex-wrap: wrap;
     }
 }
 /* mobile */
